<resources>
    <string name="app_name">MakeUpMate</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="failed_picture">Failed to take photo</string>
    <string name="failed_camera_append">Failed to append camera</string>
    <string name="title_login_page">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="signup_here">SignUp Here</string>
    <string name="title_signup_page">SignUp</string>
    <string name="name">Full Name</string>
    <string name="signup">SignUp</string>
    <string name="alredy_have_account">Already have account?</string>
    <string name="login_here">Login Here</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_notempty">Email must not be empty</string>
    <string name="pass__notempty">Password must not be empty</string>
    <string name="conpass__notempty">Confirm Password must not be empty</string>
    <string name="login_arrow">login arrow</string>
    <string name="signup_arrow">signup arrow</string>
    <string name="login_text_desc">Login to MakeUpMate</string>
    <string name="create_new_account">Create new Account</string>
    <string name="slogan">Elevate Your Beauty Game with AI-Powered Perfection</string>
    <string name="back">button back</string>
    <string name="camera">Camera</string>
    <string name="capture">capture</string>
    <string name="switch_camera">switch_camera</string>
    <string name="faceguideline">faceguideline</string>
    <string name="button_analyze_your_skin">button analyze your skin</string>
    <string name="analyze_your_skin">Analyze your skin</string>
    <string name="logout">logout</string>
    <string name="preview">Preview</string>
    <string name="back_button">back button</string>
    <string name="image_preview">image preview</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="recommendation">Recommendation</string>
    <string name="line">line</string>
    <string name="your_skin_tone_is">Your Skin Tone is</string>
    <string name="there_our_recommendation">There our Recommendation</string>
    <string name="foundation">Foundation</string>
    <string name="recommendation_style">Recommendation Style</string>
    <string name="gambar_rekomen_style">gambar rekomen style</string>
    <string name="best_match">Best Match</string>
    <string name="second_recommendation">Second Recommendation</string>
    <string name="third_recommendation">Third Recommendation</string>
    <string name="logo">logo</string>
    <string name="ilustrasi">ilustrasi</string>
    <string name="make_up_style">Make Up Style</string>
    <string name="makeup_style_desc">Once you\'ve received our personalized makeup recommendations, it\'s time to bring those stunning looks to life! ✨
    \n\nTo ensure a seamless application of the recommended foundation color, consider a few key tips. Start by testing the foundation shade on your jawline or wrist. 💅 Once you find the right shade, apply it sparingly to the center of your face and blend it outwards using a foundation brush or sponge.
    \n\nRemember, the goal is to achieve a smooth and natural appearance that enhances your features and boosts your confidence. 💃 Embrace your inner beauty and let your radiance shine through like a sunflower in bloom. 🌻
</string>

</resources>