<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.WelcomeActivity"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="-2dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="265dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/slogan"
        android:textAlignment="center"
        android:textColor="@color/md_theme_dark_primaryContainer"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="378dp"
        android:layout_height="290dp"
        android:layout_marginTop="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/makeup_illust"
        android:contentDescription="@string/ilustrasi" />


    <LinearLayout
        android:id="@+id/ll_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tv_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/create_new_account"
            android:textColor="@color/white"
            android:textColorLink="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/signupArrow"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/signup_arrow"
            app:srcCompat="@drawable/create_icon" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll_create"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:text="@string/login_text_desc"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/loginArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/login_arrow"
            app:srcCompat="@drawable/login_icon" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>